# usm-t

./: .gitignore  env_setup.sh
input/arb2/: t2.vcd
input/arb2/design/: arb2.v  arb2_tb.v
input/arb2/expected/: arb2_golden_ass.txt  arb2_golden_ass_bool.txt  expected_ass.txt
input/arb2/faulty_traces/: fault_0.csv  fault_1.csv  fault_2.csv  fault_3.csv  fault_4.csv  fault_5.csv  fault_6.csv  fault_7.csv
input/arb2/simulation/: run_simulation.sh  transcript
input/arb2/traces/: t1.csv  t2.csv
input/arb2/traces/bool/: t1.csv  t1.vcd
input/arb2/traces/numeric/: t1.vcd
input/syntetic/design/: spec0.v  spec1.v  spec2.v  test.v
input/syntetic/expected/: specifications.txt
input/syntetic/traces/: trace.vcd
input/syntetic_gen/: controller.aiger  controller.sv  controller_copy.aiger  gen.py  ltl_with_propositions.txt  non_realizable_templates.txt  setup_env.sh
input/syntetic_gen/outs/: controller.sv
input/syntetic_gen/scripts/: output_templates.xml  template_lib.py
input/syntetic_gen/specs/: ltl_with_propositions.txt  non_trivial_ltl_specs.txt
input/synthetic_case_study_1/design/: spec1.v  spec3.v  spec4.v  spec5.v  spec6.v  spec7.v  spec8.v  spec9.v  test.v
input/synthetic_case_study_1/expected/: specifications.txt
input/synthetic_case_study_1/faulty_traces/csv/: fault_0.csv  fault_1.csv  fault_10.csv  fault_100.csv  fault_101.csv  fault_102.csv  fault_103.csv  fault_104.csv  fault_105.csv  fault_106.csv  fault_107.csv  fault_108.csv  fault_109.csv  fault_11.csv  fault_110.csv  fault_111.csv  fault_112.csv  fault_113.csv  fault_114.csv  fault_115.csv  fault_116.csv  fault_117.csv  fault_118.csv  fault_119.csv  fault_12.csv  fault_120.csv  fault_121.csv  fault_122.csv  fault_123.csv  fault_124.csv  fault_125.csv  fault_126.csv  fault_127.csv  fault_128.csv  fault_129.csv  fault_13.csv  fault_130.csv  fault_131.csv  fault_132.csv  fault_133.csv  (+150 more)
input/synthetic_case_study_1/faulty_traces/vcd/: fault_0.vcd  fault_1.vcd  fault_10.vcd  fault_100.vcd  fault_101.vcd  fault_102.vcd  fault_103.vcd  fault_104.vcd  fault_105.vcd  fault_106.vcd  fault_107.vcd  fault_108.vcd  fault_109.vcd  fault_11.vcd  fault_110.vcd  fault_111.vcd  fault_112.vcd  fault_113.vcd  fault_114.vcd  fault_115.vcd  fault_116.vcd  fault_117.vcd  fault_118.vcd  fault_119.vcd  fault_12.vcd  fault_120.vcd  fault_121.vcd  fault_122.vcd  fault_123.vcd  fault_124.vcd  fault_125.vcd  fault_126.vcd  fault_127.vcd  fault_128.vcd  fault_129.vcd  fault_13.vcd  fault_130.vcd  fault_131.vcd  fault_132.vcd  fault_133.vcd  (+150 more)
input/synthetic_case_study_1/traces/csv/: golden.csv
input/synthetic_case_study_1/traces/vcd/: golden.vcd
input/user_defined/communication_controller_dmt_transceiver/: run.sh  tb_fifo.vcd  transcript
input/user_defined/communication_controller_dmt_transceiver/rtl/: generic_dpram.v
input/user_defined/communication_controller_dmt_transceiver/tb/: tb_fifo.v
input/user_defined/communication_controller_dmt_transceiver/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
miners/adaptors/input_adaptors/csv_to_harm_csv/: run.sh
miners/adaptors/input_adaptors/csv_to_samples2ltl_csv/: run.sh
miners/adaptors/input_adaptors/csv_to_texada_csv/: run.sh
miners/adaptors/input_adaptors/csv_to_texada_log/: run.sh
tests/: arb.xml  synthetic_case_study_1.xml
tool/: CMakeLists.txt
tool/cmake/: FindGEDLIB.cmake
tool/examples/: CMakeLists.txt
tool/scripts/: filterLTL.sh  formula_next.txt  makeRandomLTL_and.py  makeRandomLTL_next.py  out.txt  tmp.txt
tool/src/: main.cc
tool/src/exp/: CMakeLists.txt
tool/src/miner/: CMakeLists.txt
tool/src/opal/: CMakeLists.txt
tool/src/opal/src/: opal.cpp
tool/src/traceGenerator/: traceGenerator.cc
tool/src/usm-t/: CMakeLists.txt
tool/src/usm-t/adaptor/: CMakeLists.txt
tool/src/usm-t/adaptor/include/: adaptor.hh
tool/src/usm-t/adaptor/src/: adaptor.cc
tool/src/usm-t/evaluator/: CMakeLists.txt
tool/src/usm-t/evaluator/include/: FlattenedAssertion.hh  assertion_utils.hh  evaluator.hh  gedlibWrapper.hh  simulation_based.hh  usmt-evaluator.hh  usmt_evaluator.hh  z3CheckSat.hh  z3TestCaseGenerator.hh
tool/src/usm-t/evaluator/src/: FlattenedAssertion.cc  assertion_utils.cc  edit_distance.cc  evaluator.cc  expected_vs_mined.cc  fault_coverage.cc  gedlibWrapper.cc  semantic_equivalence.cc  simulation_based.cc  syntactic_similarity.cc  usmt-evaluator.cc  usmt_evaluator.cc  z3CheckSat.cc  z3TestCaseGenerator.cc
tool/src/usm-t/gedlib/: boolean_automaton_cost.hpp  boolean_automaton_cost.ipp
tool/src/usm-t/interface/include/: ustm_core.hh
tool/src/usm-t/interface/src/: usmt_core.cc
tool/src/usm-t/testReader/: CMakeLists.txt
tool/src/usm-t/testReader/include/: test_reader.hh
tool/src/usm-t/testReader/src/: test_reader.cc
tool/src/usm-t/utils/: CMakeLists.txt
tool/src/usm-t/utils/include/: EvalReport.hh  FlattenedAssertion.hh  PathHandler.hh  Test.hh  UseCasePathHandler.hh
tool/src/usm-t/utils/src/: UseCasePathHandler.cc
tool/src/vcd2csv/: CMakeLists.txt
tool/src/vcd2csv/src/: vcd2csv.cc
tool/syntetic_gen/: README.md  controller.aiger  controller.sv  gen.py  setup_env.sh  test.aiger  test.sv
tool/syntetic_gen/outs/: controller.aiger
tool/syntetic_gen/scripts/: output_templates.xml  template_lib.py  test_ltlsynt.sh
tool/syntetic_gen/specs/: controller.aiger  expandible_templates.txt  output_templates.xml  temp.txt  test_ltlsynt.sh
tool/syntetic_gen/verilator_tests/: Controller.sv  Controller_ands.sv  Makefile  run_verilator.sh  sim_main.cpp  tb_Controller.cpp  tb_test.cpp  tb_test_template.txt  test.aiger  test.sv  test.v  trace.vcd
tool/tests/: CMakeLists.txt  edit_distance_scalabilityTests.cc  fault_coverage_scalabilityTests.cc  flattening_scalabilityTests.cc  gatherPathTests.cc  gedlibTests.cc  holdsTest.cc  languageCompareTest.cc  semantic_equivalence_scalabilityTests.cc  syntactic_similarity_scalabilityTests.cc  z3Tests.cc
tool/tests/holds_test/: t2.csv
tool/tests/holds_test/holds/: t3.csv
tool/tests/holds_test/not_holds/: t1.csv  t4.csv
tool/tests/input/: formula_and.txt
(+255 files in other folders)
